# hsdev

./: .gitignore  .travis.yml  API.md  LICENSE  MESSAGES.md  README.md  cabal3.yaml  haskell-src-exts-1.21.0.yaml  hsdev.cabal  lts-no-docs.yaml  nightly-no-docs.yaml  nightly.yaml  stack-ghc-8.0.2.yaml  stack-lts-6.yaml  stack-lts-7.yaml  stack-lts-8.yaml  stack-lts-9.yaml  stack-no-docs.yaml  stack.yaml
data/: hsdev.sql
notes/: commands.sql  hsdev.sql  todo.tasks  types.alg
src/: HsDev.hs
src/Control/Apply/: Util.hs
src/Control/Concurrent/: FiniteChan.hs  Task.hs  Util.hs  Worker.hs
src/Data/: Async.hs  Deps.hs  Group.hs  Help.hs  Lisp.hs  LookupTable.hs  Mark.hs
src/Data/Maybe/: JustIf.hs
src/HsDev/: Cabal.hs  Cache.hs  Commands.hs  Database.hs  Display.hs  Error.hs  Inspect.hs  Message.hs  PackageDb.hs  Project.hs  Sandbox.hs  Scan.hs  Stack.hs  Symbols.hs  Types.hs  Util.hs  Version.hs  Watcher.hs
src/HsDev/Cache/: Structured.hs
src/HsDev/Client/: Commands.hs  Request.hs
src/HsDev/Database/: Async.hs  SQLite.hs  Update.hs
src/HsDev/Database/SQLite/: Instances.hs  Schema.hs  Select.hs  Transaction.hs
src/HsDev/Database/SQLite/Schema/: TH.hs
src/HsDev/Database/Update/: Types.hs
src/HsDev/Inspect/: Definitions.hs  Order.hs  Resolve.hs  Types.hs
src/HsDev/PackageDb/: Types.hs
src/HsDev/Project/: Compat.hs  JSON.hs  Types.hs
src/HsDev/Scan/: Browse.hs
src/HsDev/Server/: Base.hs  Command.hs  Commands.hs  Message.hs  Response.hs  Types.hs
src/HsDev/Server/Message/: Lisp.hs
src/HsDev/Symbols/: Class.hs  Documented.hs  HaskellNames.hs  JSON.hs  Location.hs  Name.hs  Parsed.hs  Resolve.hs  Types.hs  Util.hs
src/HsDev/Tools/: .GhcMod.hs.swp  AutoFix.hs  Base.hs  Cabal.hs  ClearImports.hs  GhcMod.hs  HDocs.hs  HLint.hs  Hayoo.hs  Refact.hs  Tabs.hs  Types.hs
src/HsDev/Tools/Ghc/: Base.hs  Check.hs  Compat.hs  MGhc.hs  Prelude.hs  Repl.hs  Session.hs  System.hs  Types.hs  Worker.hs
src/HsDev/Tools/GhcMod/: InferType.hs
src/HsDev/Watcher/: Types.hs
src/System/Console/: Args.hs  Cmd.hs  Command.hs
src/System/Directory/: Paths.hs  Watcher.hs
src/System/Win32/: PowerShell.hs
src/System/Win32/FileMapping/: Memory.hs  NamePool.hs
src/Text/: Format.hs
tests/: Test.hs
tests/data/: ModuleTwo.broken.hs  ModuleTwo.modified.hs  base.sql  modules.json  package-dbs.json
tests/test-package/: LICENSE  ModuleOne.hs  ModuleThree.hs  ModuleTwo.hs  test-package.cabal
tools/: Commands.hs  Tool.hs  Types.hs  Update.hs  hsautofix.hs  hscabal.hs  hsclearimports.hs  hsdev-sqlite.hs  hsdev.hs  hshayoo.hs  hsinspect.hs
tools/Control/Concurrent/: FiniteChan.hs
tools/System/: Args.hs  Command.hs
tools/System/Win32/FileMapping/: Memory.hs  NamePool.hs
