name:                test-package
version:             0.1.0.0
synopsis:            hsdev test package
-- description:         
-- license:             
author:              voidex
maintainer:          voidex@live.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    ModuleOne
    ModuleTwo
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options: -Wall -fno-warn-tabs
  default-extensions: OverloadedStrings
